[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"



[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# select = ["ALL"]
ignore = [
  "E501",  # Line too long

  "INP",  # File {filename} is part of an implicit namespace package. Add an __init__.py
  "E741",  # ambiguous-variable-name
  "T20",  # print found
]
